Fix double scroll issue on mobiles

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,7 @@ body,
     color: $dark;
     font-family: 'Lato', sans-serif;
     font-size: 14px;
+    overflow: hidden;
 
     @include breakpoint($tablets-landscape, $tablets-portrait) {
         font-size: 16px;
